--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
             <h1>Lil Benny's Block</h1>
             <ul>
                 <li>class="nav-li"
-                    <a href="index.html"> Home </a>
+                    <a class="nav-a" href="index.html">Home</a>
                 </li>
                 <li>class="nav-li"
-                    <a href="portfolio.html"> Portfolio </a>
+                    <a class="nav-a" href="portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </nav>
