refactor to create 100 circles using loops

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -102,6 +102,11 @@
                 if (positionX < 0) {
                     speedX = -speedX;
                 }
+				function update() {
+                  positionX = positionX + 10;
+                  moveBoxTo(positionX);
+                };
+
 			};
 
 			/* 
