adding ASD projects

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -39,6 +39,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var randNum = Math.random() * 100;
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -61,31 +62,12 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
+			var $box = $('.box');
+			var boardWidth = $('.board').width();
 			var positionX = 0;
-            var speedX = 10;
-            var points = 0;
-			function update() {
-				var positionX = 0;
-				
-		        // during update... 
-			    // Frame 1
-                positionX = 0 + 10;         // positionX = 10
-                moveBoxTo(positionX);
-
-                // Frame 2
-                positionX = 10 + 10;         // positionX = 20
-                moveBoxTo(positionX);
-
-                // Frame 3
-                positionX = 20 + 10;         // positionX = 30
-                moveBoxTo(positionX);
-
-                // Frame 4
-                positionX = 30 + 10;         // positionX = 40
-                moveBoxTo(positionX);
-
-			};
-
+			var speedX = 10;
+			var points = 0; 
+			var positions
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
